--- a/6.1 Font Properties/index.html
+++ b/6.1 Font Properties/index.html
@@ -4,26 +4,53 @@
 <head>
   <meta charset="UTF-8">
   <title>CSS Properties</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
+    html {
+      font-size: 30px;
+    }
+
     body {
       background-color: cornflowerblue;
       color: white;
       font-size: 18px;
     }
 
-    /* Don't change the CSS above, add Your CSS below */
+    #color {
+      color: coral;
+    }
 
-    
+    #fsize {
+      font-size: 2rem;
+    }
+
+    #fweight {
+      font-weight: 900;
+    }
+
+    #ffamily {
+      font-family: 'Caveat', cursive;
+      font-weight: 400;
+    }
+
+    #text-align {
+      text-align: right;
+    }
+
+
+    /* Don't change the CSS above, add Your CSS below */
   </style>
 </head>
 
 <body>
   <h1>Important CSS Properties</h1>
-  <p>Color</p>
-  <p>Font Size</p>
-  <p>Font Weight</p>
-  <p>Font Family</p>
-  <p>Text Align</p>
+  <p id="color">Color</p>
+  <p id="fsize">Font Size</p>
+  <p id="fweight">Font Weight</p>
+  <p id="ffamily">Font Family</p>
+  <p id="text-align">Text Align</p>
 
   <!-- TODOs
   1. Change the color of <p>Color</p> to "coral" color.
